# swiss-army-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CompileShaders.bat  pixel-shader.hlsl  vertex-shader.hlsl
Assets/: data.asu  table.asu
Assets/Models/: CharacterModel.fbx
Assets/Shaders/: FragmentShader.frag  FragmentShader.frag.spv  VertexShader.hlsl  VertexShader.vert  VertexShader.vert.spv
Assets/Shaders/GUI/: FragmentShader.frag  VertexShader.vert
Source/: Common.h  DXMain.cpp  Main.cpp  VKMain.cpp
Source/API/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  Instance.cpp  Instance.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  SwapChainBase.cpp  SwapChainBase.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Source/Common/: Common.h  Math.h  Vertex.h
Source/DX/: Buffer.cpp  Buffer.h  Common.h  DX.h  Debugger.cpp  Debugger.h  DepthBuffer.cpp  DepthBuffer.h  GraphicsContext.cpp  GraphicsContext.h  Instance.cpp  Instance.h  Math.h  RenderTargetView.cpp  RenderTargetView.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h
Source/DX/Device/: Device.cpp  Device.h
Source/ECS/: Component.cpp  Component.h  Entity.cpp  Entity.h  Factory.cpp  Factory.h  Transform.cpp  Transform.h
Source/Graphics/: SwapChainBase.cpp  SwapChainBase.h
Source/Logic/: IOrthogonal.h  IPerspective.h  ISpace.cpp  ISpace.h  ISpaceObject.cpp  ISpaceObject.h
Source/Util/: Aligned.cpp  Aligned.h  Assets.cpp  Assets.h  Format.h  Path.cpp  Path.h
Source/Util/Shaders/: SPIRV.cpp  SPIRV.h
Source/VK/: Common.h  GraphicsContext.cpp  GraphicsContext.h  Objects.h  VK.h  vk.cpp  vk.h
Source/VK/Commands/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h
Source/VK/Device/: Device.cpp  (+3 more)
Source/Window/: GLFWHeader.h  RawWindow.cpp  RawWindow.h  Time.cpp  Time.h  Window.cpp  Window.h
assets/models/: cube.fbx
src/: common.h  common_math.h  debugger.h  graphics.cpp  graphics.h  header.h  main.cpp  window.cpp  window.h
src/common/: vertex.h
src/d3d/: buffer.cpp  buffer.h  common.cpp  common.h  d3d.cpp  d3d.h  d3d_instance.cpp  d3d_instance.h  debugger.cpp  debugger.h  depth_stencil_buffer.cpp  depth_stencil_buffer.h  device.cpp  device.h  dx_debugger.cpp  dx_debugger.h  dx_instance.cpp  dx_instance.h  sampler.cpp  sampler.h  shader.cpp  shader.h  texture.cpp  texture.h  win.h  window.cpp  window.h
src/dx/: RenderTargetView.cpp  RenderTargetView.h  buffer.cpp  buffer.h  debugger.cpp  debugger.h  dx.h  instance.cpp  instance.h  math.h  sampler.cpp  sampler.h  shader.cpp  shader.h  texture.cpp  texture.h
src/util/: assets.cpp  assets.h
src/window/: window.cpp  window.h
(+169 files in other folders)
